static: light/dark favicon

--- a/templates/_head_extend.html
+++ b/templates/_head_extend.html
@@ -1,3 +1,8 @@
+<link rel="icon" type="image/png" href="{{ get_url(path='img/favicon-light.png') }}" media="(prefers-color-scheme: light)">
+<link rel="apple-touch-icon" href="{{ get_url(path='img/favicon-light.png') }}" media="(prefers-color-scheme: light)">
+<link rel="icon" type="image/png" href="{{ get_url(path='img/favicon-dark.png') }}" media="(prefers-color-scheme: dark)">
+<link rel="apple-touch-icon" href="{{ get_url(path='img/favicon-dark.png') }}" media="(prefers-color-scheme: dark)">
+
 {% if section and section.title and section.title == "aptenodytes::posts" %}
 <style>
   .section-title h1 {
