templates: fix code mark width

--- a/templates/_head_extend.html
+++ b/templates/_head_extend.html
@@ -3,7 +3,6 @@
 <link rel="icon" type="image/png" href="{{ get_url(path='img/favicon-dark.png') }}" media="(prefers-color-scheme: dark)">
 <link rel="apple-touch-icon" href="{{ get_url(path='img/favicon-dark.png') }}" media="(prefers-color-scheme: dark)">
 
-{% if section and section.title and section.title == "aptenodytes::posts" %}
 <style>
   .section-title h1 {
     margin-bottom: 1em;
@@ -13,5 +12,8 @@
   .section-title p {
     font-size: unset;
   }
+  .prose pre code {
+    display: inline-block;
+    min-width: 100%;
+  }
 </style>
-{% endif %}
